primary cta background image on mobile fix

--- a/wp-content/themes/reade-theme/src/styles/blocks/_primary-cta.scss
+++ b/wp-content/themes/reade-theme/src/styles/blocks/_primary-cta.scss
@@ -28,6 +28,12 @@ body:not(.home) {
 }
 
 .primary-cta {
+
+	.primary-cta-bg-image {
+		@include respond-below(sm) {
+			display: none;
+		}
+	}
 	&:not(.primary-footer-cta--cta) {
 		margin-top: 300px;
 		position: relative;
